New homepage, new legal docal docs, new feature tour, plus other changes

--- a/content/creators/index.html
+++ b/content/creators/index.html
@@ -2,6 +2,7 @@
 title: Hello! | For Creators and Artists
 description: Hello, artists and creators! This is your new home.
 type: light
+color: 4f2916
 ---
 
 <main class="hero background" style="background-image: linear-gradient(270deg, rgba(0,0,0,0.6), rgba(0,0,0,0.25)), url(/img/musician.jpg)"> <!--  -->
@@ -27,60 +28,9 @@ type: light
   </div>
 </main>
 
+
 <section class="container" id="hello">
   <div class="break"></div><div class="break"></div>
-  <h1 class="h1 bold center"><b>Why should I care about Chorale?</b></h1>
-  <div class="break"></div>
-
-  <div class="row">
-    <figure class="col">
-      <p class="h5 bold">Chorale is a streaming service and platform, much like SoundCloud or
-      Spotify. It is made specifically for the needs of today’s people. Light up
-      your party, wind down from a hard day at work, and take a second to love
-      the music or podcasts you listen to. So, in a nutshell, Chorale is important and publishing on Chorale is important because:</p>
-      <ul class="no-bullet">
-        <li>
-          <span class="highlighted">{{< partial "check.html" >}}</span>
-          Music is not published on Chorale via a distributor but by you
-          or your label if they have taken the liberty of the work
-        </li>
-        <li>
-          <span class="highlighted">{{< partial "check.html" >}}</span>
-          You could be (and probably are already) losing new listeners
-          by not having your music on Chorale; and to add insult to injury…
-        </li>
-        <li>
-          <span class="highlighted">{{< partial "check.html" >}}</span>
-          …the users of Chorale are passionate; they will either
-          buy or pirate your music if it is not on Chorale; so do not
-          take any risks!</li>
-        <li>
-          <span class="highlighted">{{< partial "check.html" >}}</span>
-          If you sign up right now, you will get Early Access Tester
-          status and special treatment for your lifetime
-        </li>
-        <li>
-          <span class="highlighted">{{< partial "check.html" >}}</span>
-          Everything is free and you can ask a question right now
-          if there is something on your mind (there probably is)
-        </li>
-      </ul>
-    </figure>
-    <figure class="col">
-      <img src="/img/contributing.gif" class="stretch-img">
-    </figure>
-  </div>
-
-  <div class="break"></div>
-  <div class="container center btn-group">
-    <a href="/early-access" class="btn btn--primary">Publish own work</a>
-    <a href="/contact" class="btn btn--border">Give us a shout</a>
-  </div>
-</section>
-
-
-<section class="container" id="hello">
-  <div class="break"></div><div class="break-sm"></div>
   <h1 class="h1 bold center"><b>Chorale has the features you want.</b></h1>
   <div class="break"></div>
 
@@ -144,6 +94,10 @@ type: light
          community contributes other metadata like lyrics.</p>
     </figure>
   </div>
-
-  <div class="break"></div><div class="break"></div>
 </section>
+
+<div class="container center btn-group">
+  <a href="/early-access" class="btn btn--primary">Publish on Chorale</a>
+  <a href="/contact" class="btn btn--border">Ask a question</a>
+  <div class="break"></div><div class="break"></div>
+</div>
