--- a/content/community.html
+++ b/content/community.html
@@ -6,9 +6,9 @@ type: basic
 
 <div class="break"></div><div class="break"></div>
 
-<section class="container center">
-  <h1 class="h1 bold"><b>Chorale is a team effort.<br>And you’re part of the team.</b></h1>
-  <p>These are our contributors &amp; staff. We love their work &amp; passion.</p>
+<section class="container container--narrow center">
+  <h1 class="h1 bold"><b>Chorale is a team effort. And you’re part of the team.</b></h1>
+  <p>These are our contributors &amp; staff, new &amp; old.</p>
 
   <div class="break"></div>
 
@@ -16,8 +16,18 @@ type: basic
     <img data-src="https://image.crisp.chat/avatar/operator/cadc4207-3c89-4033-a436-8670701b7839/80/?avatar=https%3A%2F%2Fs torage.crisp.chat%2Fusers%2Favatar%2Foperator%2Fcadc4207-3c89-4033-a436-8670701b7839%2Fb7361758-4256-46cf-90f4-435af9c066b0.jpg" class="person">
   </a>
 
+  <a href="https://github.com/RianWebster">
+    <img data-src="https://pbs.twimg.com/profile_images/752433712898322433/H9_buCpb_400x400.jpg" class="person">
+  </a>
+
   <a href="https://twitter.com/magnusliavag">
-    <img data-src="https://pbs.twimg.com/profile_images/904986031610572800/azmeVI1q_400x400.jpg" class="person">
+    <img data-src="/img/magnus-placeholder.jpg" class="person">
+  </a>
+
+  <br>
+
+  <a href="https://twitter.com/oxygen_gfx">
+    <img data-src="https://image.crisp.chat/avatar/operator/ccded5c6-dbf2-422f-a1f2-26e48ae051ce/240/?1504462961452" class="person person--smaller">
   </a>
   </div>
 </section>
@@ -33,16 +43,16 @@ type: basic
       <a href="/contribute">Learn more</a>
     </figure>
     <figure class="col">
-      <h2 class="h5 bold">Connect to us on socials</h2>
-      <p>Our central hub, the main place to hang out and whatever, is on Discord.
-      Yes, you can post memes.</p>
-      <a href="https://discord.io/choraleapp">Join Discord</a>
+      <h2 class="h5 bold">Visit the newsroom</h2>
+      <p>Our central hub for all updates and longterm discussion is the blog or,
+      otherwise, the newsroom.</p>
+      <a href="/blog">Read the news</a>
     </figure>
     <figure class="col">
       <h2 class="h5 bold">Learn more about us</h2>
       <p>There are a few more pages you might want to look at to get a feel for
-      who we are. Try these pages:</p>
-      <a href="/brand">See brand guide</a> or <a href="/blog">read the news</a>
+      who we are. Try our brand guide:</p>
+      <a href="/brand">See brand guide</a>
     </figure>
   </div>
   <div class="break"></div><div class="break"></div><div class="break"></div>
