--- a/content/early-access.html
+++ b/content/early-access.html
@@ -4,26 +4,25 @@ description: Early access gives users and creators the abillity to test the plat
 type: basic
 ---
 
-<div class="basic-section">
-  <div class="container container--narrow">
-    <div class="break"></div>
-    <h1 class="h1 bold"><b>Request early access</b></h1>
-    <p>Early access gives users and creators the abillity to test the
-       platform and its new features. Testers report bugs and take their time to give hones,t concise feedback at a leisurely pace. Early access is free for everyone who speaks English fluenty, and is at least 13 years old. No geographic restrictions are in place.</p>
-
-    <p>Joining is easy!</p>
-    <ul class="styled-list">
-      <li>Correctly fill out <a href="https://goo.gl/forms/7TnqL2AOOgcDJWKE2">this form</a></li>
-      <li>Wait a few days, up to a week</li>
-      <li>Check your email and use the link to sign up</li>
-    </ul>
-
-    <p>See? I told you it was simple.</p>
-
-    <div class="break-sm"></div>
-    <a href="/contact" class="btn btn--border">Ask a question</a>
-  </div>
-
+<div class="break"></div><div class="break"></div>
+<div class="container container--narrow">
   <div class="break"></div>
+  <h1 class="h1 bold"><b>Request early access</b></h1>
+  <p>Early access gives users and creators the abillity to test the
+     platform and its new features. Testers report bugs and take their time to give hones,t concise feedback at a leisurely pace. Early access is free for everyone who speaks English fluenty, and is at least 13 years old. No geographic restrictions are in place.</p>
+
+  <p>Joining is easy!</p>
+  <ul class="styled-list">
+    <li>Correctly fill out <a href="https://goo.gl/forms/7TnqL2AOOgcDJWKE2">this form</a></li>
+    <li>Wait a few days, up to a week</li>
+    <li>Check your email and use the link to sign up</li>
+  </ul>
+
+  <p>See? I told you it was simple.</p>
+
   <div class="break-sm"></div>
+  <a href="/contact" class="btn btn--border">Ask a question</a>
 </div>
+
+<div class="break"></div>
+<div class="break-sm"></div>
